--- a/ProjectCode/package.json
+++ b/ProjectCode/package.json
@@ -31,5 +31,5 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
-  "homepage": "https://impraloy.github.io/Weather-Station"
+  "homepage": "https://impraloy.github.io/Weather-Station/"
 }
